<resources>
    <string name="app_name">Shopping List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_personal">Личный Кабинет</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="gamburger">Гамбургер</string>
    <string name="login">Имя пользователя</string>
    <string name="button_add">Создать список</string>
    <string name="menu_send">Отправить</string>
    <string name="menu_change">Изменить</string>
    <string name="menu_delete">Удалить</string>
    <string name="new_list">Новый список</string>
    <string name="count">0/0</string>
    <string name="menu">Меню</string>
    <string name="list_help">Название списка</string>
    <string name="defaultCount">1</string>
    <string name="defaultPrice">0₽</string>
    <string name="sign_in">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="password">Пароль</string>
    <string name="email">Электронная почта</string>
    <string name="phone_number">Номер телефона</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_gallery">Галерея</string>
    <string name="menu_slideshow">Слайды</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="product_name">Наименование товара</string>
    <string name="amount">Кол-во</string>
    <string name="add">добавить</string>
    <string name="amount_full">Количество</string>
    <string name="price">Цена</string>
    <string name="menu_contacts">Контакты</string>
    <string name="contact_helper">Введите номер контакта</string>
    <string name="country_code">+7</string>
    <string name="phone">+7 123 456 7890</string>
    <string name="message_description">Примечание</string>
    <string name="notifications">Входящие</string>
    <string name="friendRequest">Запросы</string>
    <string name="exit">Выход</string>
    <string name="authorization">ВОЙТИ ИЛИ\nЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="info">Вы не авторизованы</string>
    <string name="userName">Имя Пользователя</string>
    <string name="save_state">Сохранить Изменения</string>
    <string name="shoppingList">Список покупок</string>
    <string name="requests">Запросы в друзья</string>
    <string name="settings">Настройки</string>
    <string name="choosePhoto">Выберите фото</string>
</resources>