<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts"
            android:title="@string/menu_contacts" />
        <item
            android:id="@+id/notificationsFragment"
            android:icon="@drawable/ic_messages"
            android:title="@string/notifications" />
        <item
            android:id="@+id/friendRequestFragment"
            android:icon="@drawable/iq_requests"
            android:title="@string/friendRequest" />
        <item
            android:id="@+id/logOutFragment"
            android:icon="@drawable/iq_exit"
            android:title="@string/exit" />
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_action_password"
            android:title="@string/action_settings" />

    </group>
</menu>