<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shop"
    tools:context=".login_fragments.RegistrationFragment" >

    <EditText
        android:id="@+id/registrationEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableStart="@drawable/ic_action_email"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/registrationPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/registrationEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/registrationEmailAddress"
        android:drawableStart="@drawable/ic_action_password"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/registrationPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/registrationPassword"
        app:layout_constraintTop_toBottomOf="@+id/registrationPassword"
        android:drawableStart="@drawable/ic_action_phone"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/apply_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#4FC3F7"
        android:text="@string/sign_in"
        android:textColor="#5D4037"
        app:layout_constraintEnd_toEndOf="@+id/registrationPhone"
        app:layout_constraintTop_toBottomOf="@+id/registrationPhone" />

</androidx.constraintlayout.widget.ConstraintLayout>