<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.vshabanov.shoppinglist.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_addListFragment"
            app:destination="@id/addListFragment" />
        <action
            android:id="@+id/action_nav_home_to_listNameFragment"
            app:destination="@id/listNameFragment" />
        <action
            android:id="@+id/action_nav_home_to_sendListFragment"
            app:destination="@id/sendListFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.vshabanov.shoppinglist.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.vshabanov.shoppinglist.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addListFragment"
        android:name="com.vshabanov.shoppinglist.ui.addlist.AddListFragment"
        android:label="fragment_add_list"
        tools:layout="@layout/fragment_add_list" >
        <action
            android:id="@+id/action_addListFragment_to_listNameFragment"
            app:destination="@id/listNameFragment" />
    </fragment>
    <fragment
        android:id="@+id/listNameFragment"
        android:name="com.vshabanov.shoppinglist.ui.itemshow.ListNameFragment"
        android:label="fragment_list_name"
        tools:layout="@layout/fragment_list_name" >
        <action
            android:id="@+id/action_listNameFragment_to_product_Add_Fragment"
            app:destination="@id/product_Add_Fragment" />
        <argument
            android:name="name"
            android:defaultValue="Новый Список" />
        <action
            android:id="@+id/action_listNameFragment_to_editProductFragment"
            app:destination="@id/editProductFragment" />
    </fragment>
    <fragment
        android:id="@+id/product_Add_Fragment"
        android:name="com.vshabanov.shoppinglist.ui.addproduct.AddProductFragment"
        android:label="fragment_add_product"
        tools:layout="@layout/fragment_add_product" >
        <argument
            android:name="name"
            android:defaultValue="Новый список" />
    </fragment>
    <fragment
        android:id="@+id/editProductFragment"
        android:name="com.vshabanov.shoppinglist.ui.editproduct.EditProductFragment"
        android:label="fragment_edit_product"
        tools:layout="@layout/fragment_edit_product" />
    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.vshabanov.shoppinglist.ui.contacts.ContactsFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_contacts" >
        <action
            android:id="@+id/action_nav_contacts_to_addContactFragment"
            app:destination="@id/addContactFragment" />
    </fragment>
    <fragment
        android:id="@+id/addContactFragment"
        android:name="com.vshabanov.shoppinglist.ui.addcontact.AddContactFragment"
        android:label="fragment_add_contact"
        tools:layout="@layout/fragment_add_contact" />
    <fragment
        android:id="@+id/sendListFragment"
        android:name="com.vshabanov.shoppinglist.ui.sendlist.SendListFragment"
        android:label="fragment_send_list"
        tools:layout="@layout/fragment_send_list" >
        <argument
            android:name="_id"
            app:argType="string"
            android:defaultValue='""' />
    </fragment>
</navigation>