<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editproduct.EditProductFragment">

    <TextView
        android:id="@+id/textViewItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/product_name"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textViewItemName"
        app:layout_constraintTop_toBottomOf="@+id/textViewItemName" />

    <TextView
        android:id="@+id/textViewItemAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginVertical="20dp"
        android:text="@string/amount_full"
        app:layout_constraintStart_toStartOf="@+id/editTextItemName"
        app:layout_constraintTop_toBottomOf="@+id/editTextItemName" />

    <EditText
        android:id="@+id/editTextItemAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textViewItemAmount"
        app:layout_constraintTop_toBottomOf="@+id/textViewItemAmount" />

    <TextView
        android:id="@+id/textViewItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginVertical="20dp"
        android:text="@string/price"
        app:layout_constraintStart_toStartOf="@+id/editTextItemAmount"
        app:layout_constraintTop_toBottomOf="@+id/editTextItemAmount" />

    <EditText
        android:id="@+id/editTextItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textViewItemPrice"
        app:layout_constraintTop_toBottomOf="@+id/textViewItemPrice" />

</androidx.constraintlayout.widget.ConstraintLayout>